# ReadSGP30

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Configuration.hpp  I2CBus.cpp  I2CBus.hpp  README.md  SGP30.cpp  SGP30.hpp  SensirionSensor.cpp  SensirionSensor.hpp
