cmake_minimum_required (VERSION 3.12)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
project (read_sgp30)
add_compile_options(-std=gnu++17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(read_sgp30 I2CBus.cpp I2CBus.hpp StatusTools.hpp main.cpp SGP30.hpp
        SGP30.cpp Application.cpp Application.hpp SensirionSensor.cpp SensirionSensor.hpp Configuration.hpp)
target_link_libraries(read_sgp30 stdc++fs.a)
install(TARGETS read_sgp30 DESTINATION /usr/local/bin)
